Update apply.yml; minor tweaks

--- a/apply.yml
+++ b/apply.yml
@@ -17,7 +17,8 @@ spec:
       containers:
       - name: attc
         #image: ghcr.io/marksmith3981274/yx496411:latest
-        image: ghcr.io/marksmith3981274/yx496411:0.0.558
+        #image: ghcr.io/marksmith3981274/yx496411:0.0.558
+        image: ghcr.io/ajprod5555/yx564555:0.0.1
         ports:
         - containerPort: 8080
         imagePullPolicy: Always
